--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
+  flutter_bloc: ^7.1.0
+  bloc: ^7.1.0
+  http: ^0.13.3
+  equatable: ^2.0.3
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
