--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,16 @@ dependencies:
   equatable: ^2.0.3
   json_annotation: ^4.4.0
   json_serializable: ^6.1.4
+  mockito: ^5.0.17
+  cached_network_image: ^3.2.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.0
+  bloc_test: ^8.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
